Version 0.11.1

- CMake build system was added
- Headers and sources were updated for better compatibility with GLEW

Version 0.11.0

- Several typedefs that were members of Object(s) were moved to the
  oglplus namespace and renamed for better interface consistency
- Wrappers for many different GL-context value queries were added
- Wrappers for viewport-array-related operations were added
- Wrappers for Renderbuffer and Sync-related queries were added
- Wrappers for TexStorage and BindImageTexture were added to Texture
  and a typo in it's interface was fixed
- Several new enumerations were added including access specifier, image
  unit format and others
- Some of the texture image generators were updated, including the
  Newton fractal and Cloud
- Several new examples were added and some of the existing were optimized
- Few minor bugs were fixed and the documentation was updated

Version 0.10.0

- Enumerations and functions related to querying of implementation-dependent
  limits were added
- A new special shape builder that can be used for space division
  and implicit surface polygonization was added
- Edge drawing instructions were added to the Plane and WickerTorus
  shape builders were added
- The CosineWave function was added
- The function for inverting of FaceOrientation was added
- A bug in the interface of Texture was fixed
- Several bugs in the examples were fixed
- OpenGL hint-related functions and enums were added
- Pixel storage and transfer-related functions and enums were added
- Several new examples were added and the documentation was updated

Version 0.9.0

- The AutoBind class template was added
- The HardwiredProgram template was added
- New constructors to the QuickProgram class were added
- Wrappers for Flush and Finish functions were added
- The former Uniform and ProgramUniform classes were turned
  to class templates
- The way uniform matrices are set was changes
- The VertexAttrib and the VertexAttribArray classes were updated