@@ -16,14 +16,34 @@ oglplus_archive_items="
 	README.txt
 	CHANGELOG
 	VERSION
-	Makefile
 	CMakeLists.txt
 	configure.sh
 "
 
-make clean
-make prebuilt
+if [ ! -f ./configure.sh ]
+then echo "Run from the OGLplus root dir!" &&  exit 1
+fi
 
+rm -rf ./_prebuilt ./_build
+
+./configure.sh --from-scratch --no-examples --no-docs
+(cd ./_build && make auto_generated_headers oglplus_textures)
+
+#
+# move built files to the pre-built directory
+function move_files()
+{
+	build_dir="./_build"
+	prebuilt="./_prebuilt"
+
+	mkdir -p ${prebuilt}/${1}
+	mv ${build_dir}/${1}/*.${2} ${prebuilt}/${1}/
+}
+#
+move_files include/oglplus/bound hpp
+move_files textures png
+#
+#
 file_basename="oglplus-$(< VERSION)"
 
 fixlnpath_sed='s|\./||;s|[^/]\+/|../|g'
